Remove sc_icon in prime stage of snap
Also edit .gitignore for snapcraft generated files

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ mac/SkyCheckers.xcodeproj/project.xcworkspace/xcuserdata
 linux/skycheckers
 linux/Data
 linux/scdev
+linux/skycheckers*_amd64.*
 win/Debug
 win/Release
 win/x64/Debug
