Use XDG_CONFIG_HOME standard path for defaults file

--- a/linux/Makefile
+++ b/linux/Makefile
@@ -1,4 +1,5 @@
 DESTDIR?=/
+USER_DIRNAME?=usr
 
 FILES=main.c ai.c animation.c audio_sdl.c characters.c collision.c console.c text.c font_sdl.c gamepad_sdl.c menus_desktop.c menu_actions.c input.c defaults_linux.c defaults_file.c network.c scenery.c texture.c texture_sdl.c thread_posix.c quit_sdl.c time_sdl.c window_sdl.c keyboard_sdl.c app_sdl.c mt_random.c weapon.c renderer.c renderer_gl.c renderer_projection.c
 
@@ -31,18 +32,18 @@ clean:
 
 .PHONY: install
 install: uninstall
-	cp skycheckers $(DESTDIR)/usr/bin/skycheckers
-	mkdir -p $(DESTDIR)/usr/share/skycheckers
-	cp -R Data $(DESTDIR)/usr/share/skycheckers/
-	mkdir -p $(DESTDIR)/usr/share/icons/hicolor/512x512/apps/
-	cp icons/512x512/com.zgcoder.skycheckers.png $(DESTDIR)/usr/share/icons/hicolor/512x512/apps/
-	mkdir -p $(DESTDIR)/usr/share/applications
-	cp com.zgcoder.skycheckers.desktop $(DESTDIR)/usr/share/applications/
+	cp skycheckers $(DESTDIR)/$(USER_DIRNAME)/bin/skycheckers
+	mkdir -p $(DESTDIR)/$(USER_DIRNAME)/share/skycheckers
+	cp -R Data $(DESTDIR)/$(USER_DIRNAME)/share/skycheckers/
+	mkdir -p $(DESTDIR)/$(USER_DIRNAME)/share/icons/hicolor/512x512/apps/
+	cp icons/512x512/com.zgcoder.skycheckers.png $(DESTDIR)/$(USER_DIRNAME)/share/icons/hicolor/512x512/apps/
+	mkdir -p $(DESTDIR)/$(USER_DIRNAME)/share/applications
+	cp com.zgcoder.skycheckers.desktop $(DESTDIR)/$(USER_DIRNAME)/share/applications/
 
 .PHONY: uninstall
 uninstall:
-	rm -f $(DESTDIR)/usr/bin/skycheckers
-	rm -rf $(DESTDIR)/usr/share/skycheckers
-	rm -f $(DESTDIR)/usr/share/icons/hicolor/512x512/apps/com.zgcoder.skycheckers.png
-	rm -f $(DESTDIR)/usr/share/applications/com.zgcoder.skycheckers.desktop
+	rm -f $(DESTDIR)/$(USER_DIRNAME)/bin/skycheckers
+	rm -rf $(DESTDIR)/$(USER_DIRNAME)/share/skycheckers
+	rm -f $(DESTDIR)/$(USER_DIRNAME)/share/icons/hicolor/512x512/apps/com.zgcoder.skycheckers.png
+	rm -f $(DESTDIR)/$(USER_DIRNAME)/share/applications/com.zgcoder.skycheckers.desktop
 
