--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ linux/scdev
 linux/skycheckers*_amd64.*
 linux/flatpak-build/
 linux/.flatpak-builder
+linux/sc-repo
 win/Debug
 win/Release
 win/x64/Debug
