--- a/linux/Makefile
+++ b/linux/Makefile
@@ -1,5 +1,12 @@
 DESTDIR?=/
 USER_DIRNAME?=usr
+INSTALL_DATA?=1
+
+ifeq ($(INSTALL_DATA),1)
+INSTALL_SC_DATA=true
+else
+INSTALL_SC_DATA=false
+endif
 
 FILES=main.c ai.c animation.c audio_sdl.c characters.c collision.c console.c text.c font_sdl.c gamepad_sdl.c menus_desktop.c menu_actions.c input.c defaults_linux.c defaults_file.c network.c scenery.c texture.c texture_sdl.c thread_posix.c quit_sdl.c time_sdl.c window_sdl.c keyboard_sdl.c app_sdl.c mt_random.c weapon.c renderer.c renderer_gl.c renderer_projection.c
 
@@ -34,7 +41,7 @@ clean:
 install: uninstall
 	cp skycheckers $(DESTDIR)/$(USER_DIRNAME)/bin/skycheckers
 	mkdir -p $(DESTDIR)/$(USER_DIRNAME)/share/skycheckers
-	cp -R Data $(DESTDIR)/$(USER_DIRNAME)/share/skycheckers/
+	$(INSTALL_SC_DATA) && (cp -R Data $(DESTDIR)/$(USER_DIRNAME)/share/skycheckers/ || true)
 	mkdir -p $(DESTDIR)/$(USER_DIRNAME)/share/icons/hicolor/512x512/apps/
 	cp icons/512x512/com.zgcoder.skycheckers.png $(DESTDIR)/$(USER_DIRNAME)/share/icons/hicolor/512x512/apps/
 	mkdir -p $(DESTDIR)/$(USER_DIRNAME)/share/applications
