--- a/linux/snapcraft.yaml
+++ b/linux/snapcraft.yaml
@@ -32,9 +32,11 @@ apps:
 parts:
   skycheckers:
     after: [sdl2, desktop-glib-only]
-    source: https://github.com/zorgiepoo/Sky-Checkers.git
+    source: https://github.com/zorgiepoo/Sky-Checkers/releases/download/1.2/sc-snap-pak-repo.tgz
     source-subdir: linux
     plugin: make
+    make-parameters:
+      - INSTALL_DATA=0
     build-packages:
       - libsdl2-mixer-dev
       - libsdl2-ttf-dev
@@ -47,8 +49,22 @@ parts:
     override-pull: |
       snapcraftctl pull
       sed -i 's/Icon=com.zgcoder.skycheckers/Icon=\/usr\/share\/icons\/hicolor\/512x512\/apps\/com.zgcoder.skycheckers.png/g' linux/com.zgcoder.skycheckers.desktop
+
+  gamedata:
+    after: [skycheckers]
+    source: https://github.com/zorgiepoo/Sky-Checkers/releases/download/1.2/sc-snap-pak-data.tgz
+    plugin: dump
+    organize:
+      icons/512x512/com.zgcoder.skycheckers.png : usr/share/icons/hicolor/512x512/apps/com.zgcoder.skycheckers.png
+      Audio : usr/share/skycheckers/Data/Audio
+      Fonts : usr/share/skycheckers/Data/Fonts
+      gamecontrollerdb.txt : usr/share/skycheckers/Data/gamecontrollerdb.txt
+      Shaders : usr/share/skycheckers/Data/Shaders
+      Textures : usr/share/skycheckers/Data/Textures
     prime:
+      - -icons
       - -usr/share/skycheckers/Data/Textures/sc_icon.bmp
+  
   sdl2:
     source: https://www.libsdl.org/release/SDL2-2.0.12.tar.gz
     plugin: autotools
