Package icons separately from Data in game data

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ linux/skycheckers*_amd64.*
 linux/flatpak-build/
 linux/.flatpak-builder
 linux/sc-repo
+linux/sc-snap-pak-data
 linux/sc-snap-pak-data.tgz
 linux/sc-snap-pak-repo.tgz
 win/Debug
