Add 64x64 and 128x128 versions of app icon on linux

--- a/linux/Makefile
+++ b/linux/Makefile
@@ -45,6 +45,10 @@ install: uninstall
 	-$(INSTALL_SC_DATA) && cp -R Data $(DESTDIR)/$(USER_DIRNAME)/share/skycheckers/
 	-$(INSTALL_SC_DATA) && mkdir -p $(DESTDIR)/$(USER_DIRNAME)/share/icons/hicolor/512x512/apps/
 	-$(INSTALL_SC_DATA) && cp icons/512x512/com.zgcoder.skycheckers.png $(DESTDIR)/$(USER_DIRNAME)/share/icons/hicolor/512x512/apps/
+	-$(INSTALL_SC_DATA) && mkdir -p $(DESTDIR)/$(USER_DIRNAME)/share/icons/hicolor/128x128/apps/
+	-$(INSTALL_SC_DATA) && cp icons/128x128/com.zgcoder.skycheckers.png $(DESTDIR)/$(USER_DIRNAME)/share/icons/hicolor/128x128/apps/
+	-$(INSTALL_SC_DATA) && mkdir -p $(DESTDIR)/$(USER_DIRNAME)/share/icons/hicolor/64x64/apps/
+	-$(INSTALL_SC_DATA) && cp icons/64x64/com.zgcoder.skycheckers.png $(DESTDIR)/$(USER_DIRNAME)/share/icons/hicolor/64x64/apps/
 	-$(INSTALL_SC_DATA) && touch -a -c /$(USER_DIRNAME)/share/icons/hicolor
 	mkdir -p $(DESTDIR)/$(USER_DIRNAME)/share/applications
 	cp com.zgcoder.skycheckers.desktop $(DESTDIR)/$(USER_DIRNAME)/share/applications/
@@ -56,6 +60,8 @@ uninstall:
 	rm -f $(DESTDIR)/$(USER_DIRNAME)/bin/skycheckers
 	rm -rf $(DESTDIR)/$(USER_DIRNAME)/share/skycheckers
 	rm -f $(DESTDIR)/$(USER_DIRNAME)/share/icons/hicolor/512x512/apps/com.zgcoder.skycheckers.png
+	rm -f $(DESTDIR)/$(USER_DIRNAME)/share/icons/hicolor/128x128/apps/com.zgcoder.skycheckers.png
+	rm -f $(DESTDIR)/$(USER_DIRNAME)/share/icons/hicolor/64x64/apps/com.zgcoder.skycheckers.png
 	rm -f $(DESTDIR)/$(USER_DIRNAME)/share/applications/com.zgcoder.skycheckers.desktop
 	rm -f $(DESTDIR)/$(USER_DIRNAME)/share/metainfo/com.zgcoder.skycheckers.metainfo.xml
 	touch -a -c /$(USER_DIRNAME)/share/icons/hicolor 2>&1 >/dev/null
