--- a/linux/Makefile
+++ b/linux/Makefile
@@ -49,11 +49,12 @@ install: uninstall
 	-$(INSTALL_SC_DATA) && cp icons/128x128/com.zgcoder.skycheckers.png $(DESTDIR)/$(USER_DIRNAME)/share/icons/hicolor/128x128/apps/
 	-$(INSTALL_SC_DATA) && mkdir -p $(DESTDIR)/$(USER_DIRNAME)/share/icons/hicolor/64x64/apps/
 	-$(INSTALL_SC_DATA) && cp icons/64x64/com.zgcoder.skycheckers.png $(DESTDIR)/$(USER_DIRNAME)/share/icons/hicolor/64x64/apps/
-	-$(INSTALL_SC_DATA) && touch -a -c /$(USER_DIRNAME)/share/icons/hicolor
 	mkdir -p $(DESTDIR)/$(USER_DIRNAME)/share/applications
 	cp com.zgcoder.skycheckers.desktop $(DESTDIR)/$(USER_DIRNAME)/share/applications/
 	mkdir -p $(DESTDIR)/$(USER_DIRNAME)/share/metainfo
 	cp com.zgcoder.skycheckers.metainfo.xml $(DESTDIR)/$(USER_DIRNAME)/share/metainfo/
+	-$(INSTALL_SC_DATA) && touch -a -c /$(USER_DIRNAME)/share/icons/hicolor
+	-$(INSTALL_SC_DATA) && gtk-update-icon-cache $(DESTDIR)/$(USER_DIRNAME)/share/icons/hicolor/
 
 .PHONY: uninstall
 uninstall:
@@ -65,4 +66,5 @@ uninstall:
 	rm -f $(DESTDIR)/$(USER_DIRNAME)/share/applications/com.zgcoder.skycheckers.desktop
 	rm -f $(DESTDIR)/$(USER_DIRNAME)/share/metainfo/com.zgcoder.skycheckers.metainfo.xml
 	touch -a -c /$(USER_DIRNAME)/share/icons/hicolor 2>&1 >/dev/null
+	gtk-update-icon-cache $(DESTDIR)/$(USER_DIRNAME)/share/icons/hicolor/ 2>&1 >/dev/null
 
