Don't update icon cache for pkg builds

--- a/linux/Makefile
+++ b/linux/Makefile
@@ -65,6 +65,6 @@ uninstall:
 	rm -f $(DESTDIR)/$(USER_DIRNAME)/share/icons/hicolor/64x64/apps/com.zgcoder.skycheckers.png
 	rm -f $(DESTDIR)/$(USER_DIRNAME)/share/applications/com.zgcoder.skycheckers.desktop
 	rm -f $(DESTDIR)/$(USER_DIRNAME)/share/metainfo/com.zgcoder.skycheckers.metainfo.xml
-	touch -a -c /$(USER_DIRNAME)/share/icons/hicolor 2>&1 >/dev/null
-	gtk-update-icon-cache $(DESTDIR)/$(USER_DIRNAME)/share/icons/hicolor/ 2>&1 >/dev/null
+	-$(INSTALL_SC_DATA) && touch -a -c /$(USER_DIRNAME)/share/icons/hicolor 2>&1 >/dev/null
+	-$(INSTALL_SC_DATA) && gtk-update-icon-cache $(DESTDIR)/$(USER_DIRNAME)/share/icons/hicolor/ 2>&1 >/dev/null
 
