Rename com.zgcoder to net.zgcoder for linux

--- a/linux/net.zgcoder.skycheckers.desktop
+++ b/linux/net.zgcoder.skycheckers.desktop
@@ -7,6 +7,6 @@ Terminal=false
 Exec=skycheckers
 Name=SkyCheckers
 Comment=Blast enemies off a stage
-Icon=com.zgcoder.skycheckers
+Icon=net.zgcoder.skycheckers
 Categories=Game;
 
