--- a/win/SkyCheckers.vcxproj
+++ b/win/SkyCheckers.vcxproj
@@ -65,7 +65,7 @@
     <ClCompile Include="..\src\console.c" />
     <ClCompile Include="..\src\defaults_file.c" />
     <ClCompile Include="..\src\defaults_win.c" />
-    <ClCompile Include="..\src\font_sdl.c" />
+    <ClCompile Include="..\src\font_win.cpp" />
     <ClCompile Include="..\src\gamepad_sdl.c" />
     <ClCompile Include="..\src\input.c" />
     <ClCompile Include="..\src\keyboard_sdl.c" />
@@ -180,16 +180,16 @@
     <LibraryPath>$(ProjectDir)glew-2.1.0\lib\Release\x64;$(ProjectDir)SDL2-2.0.9\lib\x64;$(ProjectDir)SDL2_ttf-2.0.14\lib\x64;$(ProjectDir)SDL2_mixer-2.0.4\lib\x64;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <IncludePath>$(ProjectDir)SDL2-2.0.12\include;$(ProjectDir)SDL2_ttf-2.0.14\include;$(ProjectDir)SDL2_mixer-2.0.4\include;$(ProjectDir);$(IncludePath)</IncludePath>
-    <LibraryPath>$(ProjectDir)SDL2-2.0.12\lib\x64;$(ProjectDir)SDL2_ttf-2.0.14\lib\x64;$(ProjectDir)SDL2_mixer-2.0.4\lib\x64;$(LibraryPath)</LibraryPath>
+    <IncludePath>$(ProjectDir)SDL2-2.0.12\include;$(ProjectDir);$(IncludePath)</IncludePath>
+    <LibraryPath>$(ProjectDir)SDL2-2.0.12\lib\x64;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <IncludePath>$(ProjectDir)glew-2.1.0\include;$(ProjectDir)SDL2-2.0.9\include;$(ProjectDir)SDL2_ttf-2.0.14\include;$(ProjectDir)SDL2_mixer-2.0.4\include;$(ProjectDir);$(IncludePath)</IncludePath>
     <LibraryPath>$(ProjectDir)glew-2.1.0\lib\Release\x64;$(ProjectDir)SDL2-2.0.9\lib\x64;$(ProjectDir)SDL2_ttf-2.0.14\lib\x64;$(ProjectDir)SDL2_mixer-2.0.4\lib\x64;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
-    <IncludePath>$(ProjectDir)SDL2-2.0.12\include;$(ProjectDir)SDL2_ttf-2.0.14\include;$(ProjectDir)SDL2_mixer-2.0.4\include;$(ProjectDir);$(IncludePath)</IncludePath>
-    <LibraryPath>$(ProjectDir)SDL2-2.0.12\lib\x64;$(ProjectDir)SDL2_ttf-2.0.14\lib\x64;$(ProjectDir)SDL2_mixer-2.0.4\lib\x64;$(LibraryPath)</LibraryPath>
+    <IncludePath>$(ProjectDir)SDL2-2.0.12\include;$(ProjectDir);$(IncludePath)</IncludePath>
+    <LibraryPath>$(ProjectDir)SDL2-2.0.12\lib\x64;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -221,7 +221,7 @@
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>d3d11.lib;dxgi.lib;SDL2.lib;SDL2main.lib;SDL2_ttf.lib;Xaudio2.lib;ws2_32.lib;Shlwapi.lib;iphlpapi.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>d3d11.lib;dxgi.lib;SDL2.lib;SDL2main.lib;Dwrite.lib;Xaudio2.lib;ws2_32.lib;Shlwapi.lib;iphlpapi.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <SubSystem>Windows</SubSystem>
     </Link>
     <PostBuildEvent>
@@ -268,7 +268,7 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalDependencies>d3d11.lib;dxgi.lib;SDL2.lib;SDL2main.lib;SDL2_ttf.lib;Xaudio2.lib;ws2_32.lib;Shlwapi.lib;iphlpapi.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>d3d11.lib;dxgi.lib;SDL2.lib;SDL2main.lib;Dwrite.lib;Xaudio2.lib;ws2_32.lib;Shlwapi.lib;iphlpapi.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <SubSystem>Windows</SubSystem>
     </Link>
     <PostBuildEvent>
