Add thread implementation for Windows

--- a/win/SkyCheckers.vcxproj
+++ b/win/SkyCheckers.vcxproj
@@ -82,7 +82,7 @@
     <ClCompile Include="..\src\text.c" />
     <ClCompile Include="..\src\texture.c" />
     <ClCompile Include="..\src\texture_win.cpp" />
-    <ClCompile Include="..\src\thread_sdl.c" />
+    <ClCompile Include="..\src\thread_win.c" />
     <ClCompile Include="..\src\time_win.c" />
     <ClCompile Include="..\src\weapon.c" />
     <ClCompile Include="..\src\window_sdl.c" />
