--- a/win/SkyCheckers.vcxproj
+++ b/win/SkyCheckers.vcxproj
@@ -250,7 +250,8 @@
       </Command>
     </PostBuildEvent>
     <PreBuildEvent>
-      <Command>"$(ProjectDir)prebuild.bat" "$(ProjectDir)"</Command>
+      <Command>
+      </Command>
     </PreBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -298,7 +299,8 @@
       </Command>
     </PostBuildEvent>
     <PreBuildEvent>
-      <Command>"$(ProjectDir)prebuild.bat" "$(ProjectDir)"</Command>
+      <Command>
+      </Command>
     </PreBuildEvent>
   </ItemDefinitionGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
