--- a/linux/Makefile
+++ b/linux/Makefile
@@ -26,9 +26,11 @@ else
 INSTALL_SC_DATA=false
 endif
 
-FILES=main.c ai.c animation.c audio_sdl.c characters.c collision.c console.c text.c font_sdl.c gamepad_sdl.c menus_desktop.c menu_actions.c input.c defaults_linux.c defaults_file.c network.c scenery.c texture.c texture_sdl.c thread_posix.c quit_sdl.c time_sdl.c window_sdl.c keyboard_sdl.c app_sdl.c mt_random.c weapon.c renderer.c renderer_gl.c renderer_projection.c
+FILES=main.c ai.c animation.c audio_sdl.c characters.c collision.c console.c menus_desktop.c menu_actions.c input.c network.c scenery.c weapon.c
 
-SOURCE=$(addprefix ../src/, $(FILES))
+FILES_ENGINE=text.c font_sdl.c gamepad_sdl.c defaults_linux.c defaults_file.c texture.c texture_sdl.c thread_posix.c quit_sdl.c time_sdl.c window_sdl.c keyboard_sdl.c app_sdl.c mt_random.c renderer.c renderer_gl.c renderer_projection.c
+
+SOURCE=$(addprefix ../src/, $(FILES)) $(addprefix ../scengine/, $(FILES_ENGINE))
 
 WARNINGS=-Wall -Wextra -Wno-unused-parameter
 
