--- a/mac/macOS/Info.plist
+++ b/mac/macOS/Info.plist
@@ -20,12 +20,14 @@
 	<string>$(PRODUCT_BUNDLE_PACKAGE_TYPE)</string>
 	<key>CFBundleVersion</key>
 	<string>$(CURRENT_PROJECT_VERSION)</string>
-	<key>LSApplicationCategoryType</key>
-	<string>public.app-category.action-games</string>
 	<key>GCSupportsGameMode</key>
 	<true/>
+	<key>LSApplicationCategoryType</key>
+	<string>public.app-category.action-games</string>
 	<key>LSMinimumSystemVersion</key>
 	<string>$(MACOSX_DEPLOYMENT_TARGET)</string>
+	<key>LSSupportsGameMode</key>
+	<true/>
 	<key>NSHumanReadableCopyright</key>
 	<string>Copyright © 2010 Mayur Pawashe</string>
 	<key>NSMainNibFile</key>
